# anzu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: anzu_ci.yml
anzu/: CMakeLists.txt  main.cpp  meta-info.cmake
anzu/cmake/: anzu_build.cmake  ccache.cmake  testing.cmake
anzu/libanzu/: CMakeLists.txt  meta-info.cmake
anzu/libanzu/include/anzu/core/: macros.h
anzu/libanzu/src/: lib.cpp
